@@ -4,6 +4,13 @@ Changelog
 1.8 - Unreleased
 ----------------
 
+* Added help for all commands to PyPI description.
+  [fschulze]
+
+* Added option to ``help`` command which outputs the help for all commands in
+  reStructuredText format.
+  [fschulze]
+
 * Don't abort after user answered `no` on whether to update a package, just
   skip that package.
   [fschulze]
